# native_toolchain_rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  melos.yaml  pubspec.yaml
.github/workflows/: check_and_lint.yml
example/dart_package/: native_manifest.yaml  pubspec.yaml
example/dart_package/example/: dart_package_example.dart
example/dart_package/hook/: build.dart
example/dart_package/lib/: dart_package.dart
example/flutter_package/: .metadata  native_manifest.yaml  pubspec.yaml
example/flutter_package/rust/: Cargo.toml
example/flutter_package/rust/src/: lib.rs
lib/: native_toolchain_rust.dart
lib/src/: android_linker_wrapper.dart  builder.dart  command.dart  manifest.dart  rustup.dart
native_doctor/: CHANGELOG.md  README.md  pubspec.yaml
native_doctor/lib/: native_doctor.dart
native_doctor/test/: android_environment_test.dart  manifest_test.dart  ndk.dart  sdkmanager.txt
native_toolchain_rust/: .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml  pubspec_overrides.yaml
native_toolchain_rust/lib/: native_toolchain_rust.dart  rustup.dart
native_toolchain_rust/test/: build_test.dart
native_toolchain_rust_common/: CHANGELOG.md  README.md  pubspec.yaml
native_toolchain_rust_common/lib/: native_toolchain_rust_common.dart
native_toolchain_rust_common/test/: manifest_test.dart
rustup/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
rustup/lib/: rustup.dart
rustup/test/: installer_test.dart  rustup_test.dart
test/: android_environment_test.dart  native_toolchain_rust_test.dart  rustup_test.dart
(+34 files in other folders)
