[package]
name = "flutter_ffi_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
sum=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Non-trivial dependency that has transitive dependencies with build scripts.
image = "0.25.2"

